# docparse

./: .gitignore  Cargo.toml  rustfmt.toml
crates/docparse-core/: Cargo.toml
crates/docparse-core/src/: document.rs  lib.rs
crates/docparse-core/src/layout/: analyzer.rs  label.rs  mod.rs  model.rs  postprocess.rs  preprocess.rs  types.rs
crates/docparse-core/src/pdf/: mod.rs
crates/docparse-layout/: Cargo.toml
crates/docparse-layout/src/: detector.rs  lib.rs
crates/docparse-layout/src/ml/: backend.rs  imageproc.rs  mod.rs
crates/docparse-layout/src/pp_doclayout/: config.rs  mod.rs  model.rs  ops.rs  postprocess.rs  preprocess.rs  weights.rs
crates/docparse-ort/: Cargo.toml
crates/docparse-ort/src/: config.rs  lib.rs  session.rs
crates/docparse-wasm/: Cargo.toml
crates/docparse-wasm/src/: lib.rs
crates/docparse-web/: Cargo.toml  build.rs
crates/docparse-web/src/: lib.rs  pdf.rs  pdfium_wasm_shim.c  session.rs
docs/superpowers/plans/: 2026-07-02-ort-layout-migration.md
docs/superpowers/specs/: 2026-07-02-ort-layout-migration-design.md
scripts/: download_model.py  download_pp_doclayout_model.py  reference_layout.py
src/: main.rs
tests/: cli.rs  layout_workspace.rs
wasm/: index.html
web/: index.html
