[package]
name = "docparse"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/docparse-core",
    "crates/docparse-ort",
    "crates/docparse-web",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_import_braces = "deny"
elided_lifetimes_in_paths = "deny"

[workspace.lints.clippy]
# Panic prevention
string_slice = "warn"
indexing_slicing = "warn"

unwrap_used = "warn"
panic = "warn"
get_unwrap = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Silent failure prevention
let_underscore_future = "warn"
let_underscore_must_use = "allow"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Async/concurrency safety
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"

# Numeric safety
float_cmp = "warn"
float_cmp_const = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

# Unsafe code safety
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
mem_forget = "warn"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cc = "1"
futures = "0.3"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
js-sys = "0.3"
liteparse-pdfium = "1.3.0"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "api-24",
    "copy-dylibs",
    "download-binaries",
    "ndarray",
    "std",
    "tls-native",
    "tracing",
] }
ort-web = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
docparse-core = { path = "crates/docparse-core" }
docparse-ort = { path = "crates/docparse-ort" }
serde = { workspace = true }
serde_json = { workspace = true }
