[package]
name = "docparse-layout"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
# burn
burn-tensor = "0.21"
burn-wgpu = { version = "0.21", default-features = false, features = [
    "autotune",
    "fusion",
    "std",
    "webgpu",
] }

# model
safetensors = "0.8"

# error
anyhow = "1"
thiserror = "2.0.18"
tracing = "0.1"
web-time = "1.1"

# serialize
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# misc
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Hugging Face download support stays native-only because browser inference
# receives model files as ArrayBuffers from JavaScript.
hf-hub = { version = "0.5.0", default-features = false, features = [
    "tokio",
    "ureq",
    "rustls-tls",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Burn/WGPU pulls getrandom through its stack; browser builds need the JS
# entropy backend enabled explicitly.
getrandom = { version = "0.4", features = ["wasm_js"] }
