[package]
name = "docparse-wasm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
docparse-layout = { path = "../docparse-layout" }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
